<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:columnCount="3"
        app:rowCount="3"
        app:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/wind_speed" />

            <TextView
                android:id="@+id/d_wind_speed_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/wind_speed"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/pressure" />

            <TextView
                android:id="@+id/d_pressure_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/pressure"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/precipitation" />

            <TextView
                android:id="@+id/d_precipitation_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/precipitation"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/temperature" />

            <TextView
                android:id="@+id/d_temperature_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/d_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/clear_day" />

            <TextView
                android:id="@+id/d_icon_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/default_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/humidity" />

            <TextView
                android:id="@+id/d_humidity_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/visibility" />

            <TextView
                android:id="@+id/d_visibility_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/visibility"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/cloud_cover" />

            <TextView
                android:id="@+id/d_cloud_cover_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/cloud_cover"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/default_text"
                app:srcCompat="@drawable/ozone" />

            <TextView
                android:id="@+id/d_ozone_value"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:text="@string/default_value"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/ozone"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>